# pdf-recrypt

./: CMakeLists.txt  README.md
.github/workflows/: create-release-binaries.yml
Recrypt/: CMakeLists.txt  recrypt-cli.cpp
